# IntelligentRecipeManagementSystem

./: .clang-format  .gitignore  CMakeLists.txt  README.md  project_plan_v3.0.md
data/: encyclopedia_recipes.json
src/: main.cpp
src/api/: dll_api.cpp
src/cli/: CliUtils.cpp  CliUtils.h  ExitCodes.h
src/cli/encyclopedia/: RecipeEncyclopediaCommandHandler.cpp  RecipeEncyclopediaCommandHandler.h
src/cli/handlers/: AdminCommandHandler.cpp  AdminCommandHandler.h  RecipeCommandHandler.cpp  RecipeCommandHandler.h  UserCommandHandler.cpp  UserCommandHandler.h
src/cli/recipe/: RecipeCommandHandler.cpp  RecipeCommandHandler.h
src/cli/restaurant/: RestaurantCommandHandler.cpp  RestaurantCommandHandler.h
src/cli/user/: UserCommandHandler.cpp  UserCommandHandler.h
src/common/exceptions/: BaseException.h  BusinessLogicException.h  ConfigurationException.h  PersistenceException.h  ValidationException.h
src/core/: CustomLinkedList.h
src/domain/recipe/: Recipe.cpp  Recipe.h  RecipeRepository.h
src/domain/restaurant/: Restaurant.cpp  Restaurant.h  RestaurantRepository.h
src/domain/user/: User.cpp  User.h  UserRepository.h
src/logic/encyclopedia/: RecipeEncyclopediaManager.cpp  RecipeEncyclopediaManager.h
src/logic/recipe/: RecipeManager.cpp  RecipeManager.h
src/logic/restaurant/: RestaurantManager.cpp  RestaurantManager.h
src/logic/user/: UserManager.cpp  UserManager.h
src/persistence/: JsonRecipeRepository.cpp  JsonRecipeRepository.h  JsonRepositoryBase.h  JsonRestaurantRepository.cpp  JsonRestaurantRepository.h  JsonUserRepository.cpp  JsonUserRepository.h  PersistenceManager.cpp  PersistenceManager.h
tests/: TestCustomLinkedList.cpp  TestJsonRecipeRepository.cpp  TestPersistenceComprehensive.cpp  TestPersistenceRestaurant.cpp  TestRecipe.cpp  TestRecipeEncyclopediaCommandHandler.cpp  TestRecipeEncyclopediaManager.cpp  TestRecipeManager.cpp  TestRestaurant.cpp  TestRestaurantManager.cpp
